# eng-ai-agents

assignments/: assignment-4.md
assignments/assignment-1/: low_rank_gaussians_1.ipynb
assignments/assignment-3/: .gitignore  README.md  download_videos.py  drone_pipeline.ipynb  main.py  pipeline.py  prepare_dataset.py  pyproject.toml  tracker.py  train_detector.py
